--- a/app/app/src/main/AndroidManifest.xml
+++ b/app/app/src/main/AndroidManifest.xml
@@ -14,6 +14,12 @@
         android:theme="@style/Theme.PlanDeClasse"
         tools:targetApi="31">
         <activity
+            android:name=".Aide"
+            android:exported="false" />
+        <activity
+            android:name=".NousContacter"
+            android:exported="false" />
+        <activity
             android:name=".ParametresAlgorithme"
             android:exported="false" />
         <activity
