--- a/app_comp/pubspec.yaml
+++ b/app_comp/pubspec.yaml
@@ -16,7 +16,15 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 2.0.0+7
+
+msix_config:
+  display_name: Plan de Classe
+  publisher_display_name: IPIC-ASSO
+  identity_name: com.ipiccie.plandeclasse
+  msix_version: 1.0.0.0
+  logo_path: C:\Users\IIdri\Desktop\LE_dossier\IPIC_cie\PlanDeClasse\app_comp\assets\images\logo2.png
+  capabilities: create plan de classe
 
 environment:
   sdk: '>=2.19.2 <3.0.0'
@@ -36,6 +44,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   shared_preferences: ^2.1.0
+  path_provider: ^2.0.15
+  csv: ^5.0.2
+  url_launcher: ^6.1.9
+  screenshot: ^2.0.0
 
 dev_dependencies:
   flutter_test:
@@ -47,6 +59,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  msix: ^3.16.1
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -86,3 +100,4 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
