--- a/app_comp/pubspec.yaml
+++ b/app_comp/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   csv: ^5.0.2
   url_launcher: ^6.1.9
   screenshot: ^2.0.1
+  photo_view: ^0.14.0
 
 dev_dependencies:
   flutter_test:
