--- a/app_comp/android/app/src/main/AndroidManifest.xml
+++ b/app_comp/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,4 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.ipiccie.plandeclasse">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <permission android:name="WRITE_EXTERNAL_STORAGE" />
 
    <application
