--- a/app_comp/pubspec.yaml
+++ b/app_comp/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   url_launcher: ^6.1.9
   screenshot: ^2.0.1
   photo_view: ^0.14.0
+  window_manager: ^0.3.7
+
 
 dev_dependencies:
   flutter_test:
