--- a/app_comp/android/app/src/main/AndroidManifest.xml
+++ b/app_comp/android/app/src/main/AndroidManifest.xml
@@ -6,7 +6,11 @@
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher"
        android:requestLegacyExternalStorage="true">
-        <activity
+       <meta-data
+       android:name="com.google.android.gms.ads.APPLICATION_ID"
+       android:value="ca-app-pub-9220805797747004~8923701110"/>
+
+       <activity
             android:name=".MainActivity"
             android:exported="true"
             android:launchMode="singleTop"
