--- a/app_comp/android/app/build.gradle
+++ b/app_comp/android/app/build.gradle
@@ -42,7 +42,7 @@ android {
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
         minSdkVersion flutter.minSdkVersion
         targetSdkVersion 33
-        versionCode flutterVersionCode.toInteger()
+        versionCode 13
         versionName flutterVersionName
     }
 
